--- a/references.bib
+++ b/references.bib
@@ -622,3 +622,59 @@
   year={2019},
   publisher={IOP Publishing}
 }
+
+@article{muller2013sensors,
+  title={Sensors and the city: a review of urban meteorological networks},
+  author={Muller, Catherine L and Chapman, Lee and Grimmond, CSB and Young, Duick T and Cai, Xiaoming},
+  journal={International Journal of Climatology},
+  volume={33},
+  number={7},
+  pages={1585--1600},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{grimmond2006progress,
+  title={Progress in measuring and observing the urban atmosphere},
+  author={Grimmond, CSB},
+  journal={Theoretical and Applied Climatology},
+  volume={84},
+  pages={3--22},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{rundel2009environmental,
+  title={Environmental sensor networks in ecological research},
+  author={Rundel, Philip W and Graham, Eric A and Allen, Michael F and Fisher, Jason C and Harmon, Thomas C},
+  journal={New Phytologist},
+  volume={182},
+  number={3},
+  pages={589--607},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@book{dargie2010fundamentals,
+  title={Fundamentals of wireless sensor networks: theory and practice},
+  author={Dargie, Waltenegus and Poellabauer, Christian},
+  year={2010},
+  publisher={John Wiley \& Sons}
+}
+
+@article{ho2014mapping,
+  title={Mapping maximum urban air temperature on hot summer days},
+  author={Ho, Hung Chak and Knudby, Anders and Sirovyak, Paul and Xu, Yongming and Hodul, Matus and Henderson, Sarah B},
+  journal={Remote Sensing of Environment},
+  volume={154},
+  pages={38--45},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@phdthesis{buchau2018modelling,
+  title={Modelling Shield Temperature Sensors: An Assessment of the Netatmo Citizen Weather Station},
+  author={B{\"u}chau, Yann Georg},
+  year={2018},
+  school={Universit{\"a}t Hamburg}
+}
